--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "bin": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js",
-    "serve": "nodemon server.js"
+    "start": "nodemon --legacy-watch server.js",
+    "serve": "npm install && nodemon --legacy-watch server.js"
   },
   "keywords": [
     "nodejs",
@@ -22,7 +22,10 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.3",
     "morgan": "^1.9.1",
-    "multer": "^1.4.2"
+    "multer": "^1.4.2",
+    "npm": "^7.10.0",
+    "run": "^1.4.0",
+    "serve": "^11.3.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
